--- a/blog-web/package.json
+++ b/blog-web/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vue-cli-service serve --mode test",
+    "build-test": "vue-cli-service build --mode test",
+    "build-prod": "vue-cli-service build --mode production"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "vue": "^2.6.14",
