--- a/blog-web/package.json
+++ b/blog-web/package.json
@@ -8,9 +8,13 @@
     "build-prod": "vue-cli-service build --mode production"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.11",
     "axios": "^0.18.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "highlight.js": "^11.9.0",
+    "marked": "^9.1.5",
+    "prismjs": "^1.29.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
