--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     container_name: super-blog 
     network_mode: host
+    ports:
+      - 29913:29913
     logging:
       options:
         max-size: 100m
