--- a/blog-web/package.json
+++ b/blog-web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode test",
     "build-test": "vue-cli-service build --mode test",
-    "build-prod": "vue-cli-service build --mode production"
+    "build-prod": "vue-cli-service build --mode production --report"
   },
   "dependencies": {
     "@kangc/v-md-editor": "^1.7.11",
@@ -23,7 +23,10 @@
     "@vue/cli-plugin-babel": "^5.0.0",
     "@vue/cli-service": "^5.0.0",
     "babel-plugin-component": "^1.1.1",
-    "vue-template-compiler": "^2.6.14"
+    "compression-webpack-plugin": "^10.0.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "vue-template-compiler": "^2.6.14",
+    "webpack-cli": "^5.1.4"
   },
   "browserslist": [
     "> 1%",
