--- a/blog-web/package.json
+++ b/blog-web/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service": "^5.0.0",
     "babel-plugin-component": "^1.1.1",
     "compression-webpack-plugin": "^10.0.0",
+    "image-webpack-loader": "^8.1.0",
     "terser-webpack-plugin": "^5.3.9",
     "vue-template-compiler": "^2.6.14",
     "webpack-cli": "^5.1.4"
