feat: add blog title highlight

--- a/blog-web/.env.test
+++ b/blog-web/.env.test
@@ -1,4 +1,4 @@
-NODE_ENV = development
+NODE_ENV = test
 VUE_APP_BASE_URL="/blog"
-VUE_APP_MODE = development
-VUE_APP_BACKEND_API = 'http://127.0.0.1:29913/api'
+VUE_APP_MODE = test
+VUE_APP_BACKEND_API = 'http://139.199.213.20/api'
