--- a/blog-web/.env.production
+++ b/blog-web/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV = 'production'
-VUE_APP_BASE_URL="/blog"
+VUE_APP_BASE_URL="/"
 VUE_APP_MODE = production
-VUE_APP_BACKEND_API = 'http://47.96.95.121/api'
+VUE_APP_BACKEND_API = 'http://blog.superwhys.top/api'
