--- a/blog-web/.env.test
+++ b/blog-web/.env.test
@@ -1,4 +1,4 @@
 NODE_ENV = test
-VUE_APP_BASE_URL="/"
+VUE_APP_BASE_URL="/blog"
 VUE_APP_MODE = test
-VUE_APP_BACKEND_API = 'http://blog.superwhys.top/api'
+VUE_APP_BACKEND_API = 'http://47.96.95.121/api'
