--- a/blog-web/package.json
+++ b/blog-web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode development",
+    "serve": "vue-cli-service serve --mode production",
     "build-test": "vue-cli-service build --mode test",
     "build-prod": "vue-cli-service build --mode production --report"
   },
