--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,9 @@ debug: true
 autoHookFileChange: true
 githubToken: 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
 basePostDir: ./blog-posts
+mysqlConfig:
+  instance: mysql
+  database: blog 
+  username: yong
+  password: kBcCfmwHFQtL
+ 
