--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -43,7 +43,7 @@ jobs:
   - !BuildImageStep
     name: build image
     output: !RegistryOutput
-      tags: '@server@/super-blog:@tag@'
+      tags: '@server@/super-blog:latest,@server@/super-blog:@file:version@'
     platforms: linux/amd64
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
